Removing Commons Codec